[package]
name = "tapfs"
version = "0.1.0"
authors = ["sudeep"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
thiserror = "1.0"
parking_lot = "0.11"
keyvalue = {path = "../keyvalue"}
vstore = {path = "../vstore"}
log = "0.4"